--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -4,6 +4,7 @@
 # Translators:
 # Translators:
 # Translators:
+# roliverosc <roliverosc@hotmail.com>, 2018
 # davidmuma <davidmumar@gmail.com>, 2013
 # Ovokx <javier_benjumea@hotmail.com>, 2012
 # rasensi <rasensi@gmail.com>, 2012
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: 2012-07-03 05:24+0000\n"
 "PO-Revision-Date: 2013-04-29 08:35+0000\n"
-"Last-Translator: giftie <giftie61@hotmail.com>\n"
+"Last-Translator: giftie <roliverosc@hotmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/cdART_Manager_XBMC_ADDON/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -92,7 +93,7 @@ msgstr "Discos:"
 
 msgctxt "#32017"
 msgid "Local cdART List saving folder"
-msgstr "Carpeta para guardar lista cdART local"
+msgstr "Carpeta para guardar lista local cdART"
 
 msgctxt "#32018"
 msgid "cdART  Backup folder"
@@ -104,7 +105,7 @@ msgstr "Formato para copia de seguridad: "
 
 msgctxt "#32020"
 msgid "Retrieving Music Database"
-msgstr "Recuperando Base de Datos para música"
+msgstr "Recuperando Base de Datos de música"
 
 msgctxt "#32021"
 msgid "Creating Addon Database"
@@ -124,7 +125,7 @@ msgstr "Ilustraciones descargadas!"
 
 msgctxt "#32025"
 msgid "Check file paths-Artwork Not Downloaded"
-msgstr "Comprobar rutas para archivos - Ilustraciones no descargadas"
+msgstr "Compruebe rutas para archivos - Ilustraciones no descargadas"
 
 msgctxt "#32026"
 msgid "Download Error Occured!"
@@ -307,7 +308,7 @@ msgstr "Restaurando cdARTs desde copia de seguridad..."
 
 msgctxt "#32070"
 msgid "cdARTs Restored from backup folder"
-msgstr "cdARTs restaurados desde la carpeta de respaldo"
+msgstr "cdARTs restaurados desde carpeta de respaldo"
 
 msgctxt "#32071"
 msgid "Settings have not been setup!"
@@ -407,7 +408,7 @@ msgstr "Habilitar colores personalizados para etiquetas"
 
 msgctxt "#32095"
 msgid "File Folders"
-msgstr "Archivos"
+msgstr "Carpetas de Archivos"
 
 msgctxt "#32096"
 msgid "Duplicates Found"
@@ -459,7 +460,7 @@ msgstr "Base de datos demasiado antigua"
 
 msgctxt "#32109"
 msgid "Do you want to Rebuild?"
-msgstr "¿Desea volver a crearla?"
+msgstr "¿Desea reconstruirla?"
 
 msgctxt "#32110"
 msgid "Problem Accessing Folder, Script Exiting"
@@ -479,7 +480,7 @@ msgstr "Finalizada actualización para Miniaturas y Fanarts"
 
 msgctxt "#32114"
 msgid "Check Database MBID's to be current during an Update"
-msgstr "Comprobar durante actualización MBID de Base de Datos"
+msgstr "Comprobar durante actualización IDMB de Base de Datos"
 
 msgctxt "#32115"
 msgid "Notify while in Background mode"
@@ -551,7 +552,7 @@ msgstr "Por favor, asegúrese que la biblioteca de música haya sido creada."
 
 msgctxt "#32132"
 msgid "Updating Missing MusicBrainz Artist's IDs"
-msgstr "Actualizando IDs MusicBrainz de Artistas no encontrados"
+msgstr "Actualizando IDs MusicBrainz para Artistas no encontrados"
 
 msgctxt "#32133"
 msgid "Updating Missing MusicBrainz Album/Artist ID's"
@@ -559,11 +560,11 @@ msgstr "Actualizando IDs MusicBrainz para Álbum/Artista no encontrados"
 
 msgctxt "#32134"
 msgid "Updating Addon Database"
-msgstr "Actualizando Base de Datos del Add-on"
+msgstr "Actualizando Base de Datos"
 
 msgctxt "#32135"
 msgid "Updating Addon Database - Local Artists"
-msgstr "Actualizando Base de Datos del Add-on - Artistas Locales"
+msgstr "Actualizando Base de Datos - Artistas Locales"
 
 msgctxt "#32136"
 msgid """Enable MusicBrainz ID update during Addon Database update(for missing IDs)"
@@ -579,7 +580,7 @@ msgstr "Álbum"
 
 msgctxt "#32139"
 msgid "Successfully backed up Addon Database"
-msgstr "Copia de seguridad de Base de Datos del Add-on realizada con éxito"
+msgstr "Copia de seguridad de Base de Datos realizada con éxito"
 
 msgctxt "#32140"
 msgid "Old Database version found..."
@@ -587,7 +588,7 @@ msgstr "Encontrada Base de Datos anterior..."
 
 msgctxt "#32141"
 msgid "Would you like to add Local Artists to Addon Database?"
-msgstr "¿Desea añadir los Artistas Locales a la Base de Datos del Addon?"
+msgstr "¿Desea añadir los Artistas Locales a la Base de Datos?"
 
 msgctxt "#32142"
 msgid "Add all artists to Database during Database build or update?"
@@ -615,7 +616,7 @@ msgstr "Salir"
 
 msgctxt "#32148"
 msgid "(this can take a long time to complete)"
-msgstr "(completar esta acción puede llevar mucho tiempo)"
+msgstr "(completar esta acción puede llevar bastante tiempo)"
 
 msgctxt "#32149"
 msgid "Checking Artist MBIDs"
@@ -679,11 +680,11 @@ msgstr "¿Está seguro que desea eliminar este ID MusicBrainz?"
 
 msgctxt "#32164"
 msgid "Enter Artist name to search"
-msgstr "Introduzca nombre del Artista a buscar"
+msgstr "Introduzca el nombre de Artista a buscar"
 
 msgctxt "#32165"
 msgid "Enter Album title to search"
-msgstr "Introduzca título del Álbum a buscar"
+msgstr "Introduzca el título del Álbum a buscar"
 
 msgctxt "#32166"
 msgid "Select Album"
@@ -716,7 +717,9 @@ msgstr "Realizar copia de seguridad de Base de Datos durante actualización"
 msgctxt "#32173"
 msgid """Number of days to cache fanart.tv data(The Scheduler)[CR]Cache gets cleared "
 "with manual use of cdART Manager"
-msgstr "Número de días para guardar datos de fanart.tv (The Scheduler)[CR]La memoria caché se borra con el uso de cdART Manager"
+#msgstr "Número de días para guardar datos de fanart.tv (The Scheduler)[CR]La memoria caché se borra con el uso de cdART Manager"
+msgstr """Número de días para almacenar en caché los datos de fanart.tv(The Scheduler)[CR]La caché se borra "
+"con el uso manual de cdART Manager "
 
 msgctxt "#32174"
 msgid "Number of possible MBID matches:"
@@ -724,7 +727,7 @@ msgstr "Número de posibles coincidencias para ID MusicBrainz:"
 
 msgctxt "#32175"
 msgid "Enable replacement of illegal filename characters in artist names"
-msgstr "Habilitar reemplazo de caracteres no validos para nombres de Artistas"
+msgstr "Habilitar el reemplazo de caracteres para nombres de Artistas"
 
 msgctxt "#32176"
 msgid "   illegal characters to replace"
@@ -744,7 +747,7 @@ msgstr ""
 
 msgctxt "#32180"
 msgid "    change trailing periods to replacement character"
-msgstr "    "
+msgstr "    cambiar punto final por caracteres de remplazo"
 
 msgctxt "#32181"
 msgid "There is an error in Settings."
@@ -784,7 +787,7 @@ msgstr "     URL para Servidor MusicBrainz (ejemplo - http://192.168.1.20)"
 
 msgctxt "#32190"
 msgid "     Delay between MusicBrainz Server requests(100's of Milliseconds)"
-msgstr "     Retraso entre solicitudes a Servidor MusicBrainz (100´s Milisegundos)"
+msgstr "     Retraso entre solicitudes a Servidor MusicBrainz (100 Milisegundos)"
 
 msgctxt "#32191"
 msgid "Refresh fanart.tv data"
