--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -145,7 +145,7 @@ msgstr "¿No se encontraron ilustraciones?"
 
 msgctxt "#32030"
 msgid "Please contribute! Upload your Artwork"
-msgstr "Por favor, contribuya! Suba sus ilustraciones"
+msgstr "Por favor contribuya! Suba sus ilustraciones"
 
 msgctxt "#32031"
 msgid "On fanart.tv"
@@ -173,7 +173,7 @@ msgstr "Ruta para guardar ilustraciones"
 
 msgctxt "#32037"
 msgid "Getting local artists"
-msgstr "Buscando artistas locales"
+msgstr "Obteniendo artistas locales"
 
 msgctxt "#32038"
 msgid "Artist: "
@@ -280,11 +280,11 @@ msgstr "Ruta para archivo missing.txt"
 
 msgctxt "#32063"
 msgid "Copy Unique Local cdARTs"
-msgstr "Copiar cdARTs locales únicos"
+msgstr "Copiar cdARTs locales Unique"
 
 msgctxt "#32064"
 msgid "Unique cdARTS folder: %s"
-msgstr "Carpeta cdARTS única: %s"
+msgstr "Carpeta cdARTS Unique: %s"
 
 msgctxt "#32065"
 msgid "Comparing Local and Online cdARTs..."
@@ -332,7 +332,7 @@ msgstr "Borrar cdART"
 
 msgctxt "#32076"
 msgid "Copy To Unique Folder For Upload"
-msgstr "Copiar a una carpeta única para subir"
+msgstr "Copiar Carpeta Unique para subir"
 
 msgctxt "#32077"
 msgid "Custom Label Colors"
@@ -416,7 +416,7 @@ msgstr "Duplicados encontrados"
 
 msgctxt "#32097"
 msgid "    Resize Unique cdARTs?"
-msgstr "    Cambiar tamaño para cdARTs únicos?"
+msgstr "    Cambiar tamaño para cdARTs Unique?"
 
 msgctxt "#32098"
 msgid "Local cdART List"
@@ -456,7 +456,7 @@ msgstr "Sobrescribir cdARTs de baja resolución"
 
 msgctxt "#32108"
 msgid "Database too old"
-msgstr "Base de datos demasiado antigua"
+msgstr "Base de Datos demasiado antigua"
 
 msgctxt "#32109"
 msgid "Do you want to Rebuild?"
@@ -480,7 +480,7 @@ msgstr "Finalizada actualización para Miniaturas y Fanarts"
 
 msgctxt "#32114"
 msgid "Check Database MBID's to be current during an Update"
-msgstr "Comprobar durante actualización IDMB de Base de Datos"
+msgstr "Comprobar IDMB actuales durante actualización de Base de Datos"
 
 msgctxt "#32115"
 msgid "Notify while in Background mode"
@@ -524,7 +524,7 @@ msgstr "Recuperando todos los Artistas locales"
 
 msgctxt "#32125"
 msgid "Artist ID: "
-msgstr "ID del Artista: "
+msgstr "ID Artista: "
 
 msgctxt "#32126"
 msgid "Modify Addon Database"
@@ -568,7 +568,7 @@ msgstr "Actualizando Base de Datos - Artistas Locales"
 
 msgctxt "#32136"
 msgid """Enable MusicBrainz ID update during Addon Database update(for missing IDs)"
-msgstr "Habilitar actualizar ID MusicBrainz durante actualización Base de Datos (para IDs desconocidos)"
+msgstr """Habilitar actualizar ID MusicBrainz durante actualización Base de Datos (para IDs desconocidos)"
 
 msgctxt "#32137"
 msgid "Artist"
@@ -616,7 +616,7 @@ msgstr "Salir"
 
 msgctxt "#32148"
 msgid "(this can take a long time to complete)"
-msgstr "(completar esta acción puede llevar bastante tiempo)"
+msgstr "(completar esta acción puede llevar mucho tiempo)"
 
 msgctxt "#32149"
 msgid "Checking Artist MBIDs"
@@ -628,7 +628,7 @@ msgstr "Comprobando IDs MusicBrainz para Álbumes"
 
 msgctxt "#32151"
 msgid "Find Missing MBIDs"
-msgstr "Buscar IDs MusicBrainz que falten"
+msgstr "Buscar IDs MusicBrainz para no reconocidos"
 
 msgctxt "#32152"
 msgid "Refresh MBIDs"
@@ -680,7 +680,7 @@ msgstr "¿Está seguro que desea eliminar este ID MusicBrainz?"
 
 msgctxt "#32164"
 msgid "Enter Artist name to search"
-msgstr "Introduzca el nombre de Artista a buscar"
+msgstr "Introduzca el nombre del Artista a buscar"
 
 msgctxt "#32165"
 msgid "Enter Album title to search"
